--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <br>
        <main>
     
-        <img src="images/headshot.jpg" alt="Ana Arzola Headshot">
+        <img src="images/headshot.jpg" alt="Ana Arzola Headshot" width="300" height="300">
       
 
         <h2 id = 'cI'>Contact Information</h2>
