--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <body>
       <!-- Write your HTML in this file! -->
          <header>
-            <div class = 'name'> <h1 id = 'mainHeader'>Resume</h1></div>
+            <div class = 'mainHeading'> <h1 id = 'mainHeading'>Resume</h1></div>
          </header>
 
          <br>
