--- a/index.html
+++ b/index.html
@@ -90,12 +90,28 @@
 
          <h2 id = 'ref'>Reference</h2>
          <div class = 'reference'>
-         <p>For those who are looking for a difficult writing challenge, the random paragraph generator can provide that as well. Instead of writing about the entire paragraph, take each sentence in the paragraph and make each of those individual sentences the first or last sentence of each paragraph of a short story. Trying this difficult writing challenge should stretch your creativity to the limit.
-
-          The best way to use these random paragraphs is to generate a few and see how they can help with whatever project you're currently pursuing. You should be able to figure out quickly if this tool will be beneficial for your project or needs. Often times the best way to see if it's what you've been looking for is to use it and find out for yourself.
-          
-          We're always seeking constructive ideas on how we can improve our random paragraph generator. If you have used this tool and have an idea on how we could improve it for the benefit of everyone, we'd love to hear from you. Take a moment to email us with your ideas so we can consider them for future updates.</p>
-         </div>
+            <h2>Vickie Escarpita</h2>
+            <p>Phone:  913-345-6789
+            <br>Email: VEscarpita@mail.com
+              <br>
+              <br>
+              <br>
+            <h2>Darla Brown</h2>
+            <p>Phone:  913-987-6543
+            <br>Email: DarBrown@mail.com
+            <br>
+            <br>
+            <br>
+            <h2>Melissa McKnight</h2>
+            <p>Phone:  913-789-321
+            <br>Email: MMcKnight@mail.com
+            <br>
+            <br>
+            <br>
+            <h2>Elena Mendoza</h2>
+            <p>Phone:  913-567-8910
+            <br>Email: ElMendoza@mail.com
+          </div>
          <br>
          <br>
         </main>
